--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -1,21 +1,25 @@
-# Maintainer: Piotr Krzemiński <pio.krzeminski@gmail.com>
+# Maintainer: TBD
 
 pkgname=thinkgui
 pkgver=20150611
 pkgrel=1
 pkgdesc="GUI toolkit for ThinkPad laptops"
 arch=('i686' 'x86_64')
-url="https://github.com/krzemin/thinkgui"
+url="https://github.com/lyoneel/thinkgui"
 license=('GPL3')
 depends=('qt5-base>=5.4.0')
 makedepends=('git')
-source=('git://github.com/krzemin/thinkgui.git'
+source=('git://github.com/lyoneel/thinkgui.git'
         'thinkgui-fix-cpu-permissions.sh')
 md5sums=('SKIP'
-         '74db2ed6fc59f47b50960fe5b7f4d652')
+         'SKIP') # for now
 options=('docs')
 
 _gitname="thinkgui"
+
+pkgver() {
+  echo -e "$(date '+%Y%m%d.%H%M')"
+}
 
 build() {
   cd "$_gitname"
@@ -26,6 +30,6 @@ build() {
 package() {
   cd "$_gitname"
   make INSTALL_ROOT="$pkgdir/" install
-  install -D -m755 "$srcdir/thinkgui-fix-cpu-permissions.sh" "$pkgdir/usr/lib/systemd/system-sleep/thinkgui-fix-cpu-permissions.sh"
+  install -D -m755 "$srcdir/${source[1]}" "$pkgdir/usr/lib/systemd/system-sleep/${source[1]}"
 }
 
